--- a/VendorOrder/Views/Order/New.cshtml
+++ b/VendorOrder/Views/Order/New.cshtml
@@ -14,7 +14,7 @@
       <input id="orderDescription" name="orderDescription" type="text">
       
       <label for="orderPrice">Order Price</label>
-      <input id="orderPrice" name="orderPrice" type="number">
+      <input id="orderPrice" name="orderPrice" input type="number" min="0.00" max="10000.00" step="0.01">
       
       <label for="orderDate">Order Date</label>
       <input id="orderDate" name="orderDate" type="text">
