--- a/VendorOrder/Views/Order/Show.cshtml
+++ b/VendorOrder/Views/Order/Show.cshtml
@@ -8,10 +8,12 @@
   <body>
     <h1>Order Details: </h1>
 
-    <h2>@Model["order"].Description</h2>
-    <h3>Category: @Model["vendor"].Name</h3>
+    <h2>Description: @Model["order"].Description</h2>
+    <h2>Price: @Model["order"].Price</h2>
+    <h2>Order Date: @Model["order"].Date</h2>
+    <h3>Vendor: @Model["vendor"].Name</h3>
 
-    <a href='/vendor/@Model["vendor"].Id/order/new'>Add another order</a>
+    <a href='/vendor/@Model["vendor"].Id/order/new'>Add another order</a><br>
     <a href='/vendor'>View all vendors</a>
   </body>
 </html>
