--- a/VendorOrder/Views/Home/Index.cshtml
+++ b/VendorOrder/Views/Home/Index.cshtml
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Pierre's Bakery</h1>
-    <h3>Vendor and Order Tracker</h3>
-    <br><a href='/vendor/new'>Add a new Vendor</a><br>
-    <br><a href='/vendor'>See your vendor List</a>
+    <div class="container">
+      <h1>Pierre's Bakery</h1>
+      <img src='~/img/bakery.jpg'/>
+      <h3>Vendor and Order Tracker</h3>
+      <br><a href='/vendor/new'>Add a new Vendor</a><br>
+      <br><a href='/vendor'>See your vendor List</a>
+      </div>
   </body>
 </html>
