--- a/VendorOrder/Views/Order/New.cshtml
+++ b/VendorOrder/Views/Order/New.cshtml
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Add a new order to @Model.Name</h1>
+    <div class="container">
+    <h2>Add a new order to @Model.Name</h2>
 
     <form action="/vendor/@Model.Id/order" method="post">
       <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
@@ -20,6 +21,7 @@
       <input id="orderDate" name="orderDate" type="text">
 
       <button type='submit'>Add Order</button>
+      </div>
     </form>
   </body>
 </html>
