--- a/VendorOrder/Views/Order/Show.cshtml
+++ b/VendorOrder/Views/Order/Show.cshtml
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
   <body>
+    <div class="container">
     <h1>Order Details: </h1>
 
     <h2>Description: @Model["order"].Description</h2>
@@ -15,5 +16,6 @@
 
     <a href='/vendor/@Model["vendor"].Id/order/new'>Add another order</a><br>
     <a href='/vendor'>View all vendors</a>
+    </div>
   </body>
 </html>
