--- a/VendorOrder/Views/Order/New.cshtml
+++ b/VendorOrder/Views/Order/New.cshtml
@@ -7,21 +7,20 @@
   </head>
   <body>
     <div class="container">
-    <h2>Add a new order to @Model.Name</h2>
+      <h2>Add a new order to @Model.Name</h2>
+      <form action="/vendor/@Model.Id/order" method="post">
+        <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
+        <label for="orderDescription">Order Description</label>
+        <input id="orderDescription" name="orderDescription" type="text">
+        
+        <br><label for="orderPrice">Order Price</label>
+        <input id="orderPrice" name="orderPrice" input type="number" min="0.00" max="10000.00" step="0.01">
+        
+        <br><label for="orderDate">Order Date</label>
+        <input id="orderDate" name="orderDate" type="text">
 
-    <form action="/vendor/@Model.Id/order" method="post">
-      <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
-      <label for="orderDescription">Order Description</label>
-      <input id="orderDescription" name="orderDescription" type="text">
-      
-      <label for="orderPrice">Order Price</label>
-      <input id="orderPrice" name="orderPrice" input type="number" min="0.00" max="10000.00" step="0.01">
-      
-      <label for="orderDate">Order Date</label>
-      <input id="orderDate" name="orderDate" type="text">
-
-      <button type='submit'>Add Order</button>
-      </div>
-    </form>
+        <br><button type='submit' class="btn-success">Add Order</button>
+      </form>
+    </div>
   </body>
 </html>
